			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------


===================================
VERSION 5.5.33 (September 30, 2005)
===================================

  * FIXED: when/2: unifyable -->unifiable.  Grzegorz Chrupała.

  * ADDED: Allow hooking into output of library(debug).  Added XPCE Gui
    frontend for the debugging library called with prolog_debug_monitor/0.

  * FIXED: Prevent recursive calling of Sclose().

  * ADDED: Win32: current_prolog_flag(pid, Pid).

===================================
VERSION 5.5.32 (September 26, 2005)
===================================

  * FIXED: Typo in new PL_unify_term() conversions.

  * PORT: Allow for CFLAGS=xx ./configure.  Use LDFLAGS when building
    plrc.  Tim Brown.

  * FIXED: Initialisation bug in format/3.  Sergey Tikhonov.

  * FIXED: upcase_atom/2 and downcase_atom/2 for atoms holding characters
    in the range 128..255 but not > 255 as well as for 8-bit atoms whose
    converted version does not fit in 8-bit.  Grzegorz Chrupała.


===================================
VERSION 5.5.31 (September 19, 2005)
===================================

  * PORT: Bug#94: compilation error in pl-flag.c.  Christoph Quix.

  * ADDED: library(url): protocol https.  Anjo Anjewierden.

  * ADDED: Extra conversion arguments to PL_unify_term() to pass strings
    as wchar_t* as well as in the current locale.  Sergey Tikhonov.

  * FIXED: Retry after executing a ! to do proper undo.   Alan Baljeu.

  * FIXED: library(url): allow "-_~" in hostnames.  Jacco van Ossenbruggen.

  * PORT: Bug#90: Fix Prolog Makefile for parallel make.  Mike Frysinger.

  * ENHANCED: Faster merging of memory left from terminated threads.  Code
    contributed by Servey Tikhonov.
