@@ -9,12 +9,12 @@
 
 BUILDDIR=@BUILDDIR@
 srcdir=`echo @srcdir@ | sed 's=/../packages=='`
-ARCH=@ARCH@
+ARCH=@RT@@ARCH@
 PL=@PL@@RT@
 bdir=$srcdir/../$BUILDDIR
 ldir=$srcdir/../lib/$ARCH
 
-if [ "x$@DLLIBVAR@" = "" ]; then
+if [ "x$@DLLIBVAR@" = "x" ]; then
   @DLLIBVAR@=$ldir
 else
   @DLLIBVAR@="$ldir:$@DLLIBVAR@"
